bug selesai tinggal overflow hidden

--- a/src/index.css
+++ b/src/index.css
@@ -126,7 +126,7 @@
 } */
 
 /* styles.css */
-.game-container {
+/* .game-container {
   text-align: center;
   margin: 20px;
 }
@@ -136,4 +136,4 @@
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
-}
+} */
